Fixed alignment of checkbox and terms text in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -94,11 +94,19 @@ body {
 
 /* terms of service and link styling */
 .terms {
-	border: 0px dashed magenta;
-	font-size: 1.25rem;
+	border: 0px solid magenta;
+	margin: 2em;
+	font-size: 1.2rem;
+	line-height: 1rem;
 	text-align: center;
 	color: #22386f;
-	margin: 2em;
+}
+
+input[type='checkbox'] {
+	vertical-align: middle;
+	position: relative;
+	bottom: 1px;
+	margin-right: 0.5rem;
 }
 
 .terms a {
@@ -123,9 +131,7 @@ body {
 
 .btn {
 	width: 100%;
-	border: 0;
-	/* height: 4.5em; */
-	/* margin: 0em 0; */
+	border: none;
 	border-radius: 0 0 1rem 1rem;
 	color: #ffffff;
 	text-align: center;
